--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
-$white: #FFF;
+$white: #FFFFFF;
 $grey-blue: #C1CFDA;
 $grey-text: #979797;
 $dark-grey-text: #444444;
@@ -7,3 +7,6 @@ $dark-blue: #0B3954;
 $accent-red: #FF5A5F;
 $dark-red: #C81D25;
 $saturated-red: #FF4040;
+
+/** Images */
+$img-likbez-logo: url('~Public/likbez-original-for-web.svg');
