--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,13 +21,11 @@ button {
 
 #root {
   display: flex;
-  flex-direction: column;
-  height: 100%;
+  overflow: hidden;
+  max-height: 100vh;
 
   .main-block {
     display: flex;
-    flex-direction: column;
-    flex: 1 0 auto;
-    width: 100%;
+    flex: 1;
   }
 }
