--- a/src/components/CoursesPage/styles.scss
+++ b/src/components/CoursesPage/styles.scss
@@ -1,26 +1,22 @@
 @import '~Styles/variables.scss';
 
-$top: 50px;
-
 .courses {
-  position: relative;
-  display: flex;
-  width: 100%;
-  padding: $top 30px;
-  flex-direction: row-reverse;
-  &__list {
-    height: 100%;
-    width: 300px;
-  }
-  &__course {
+  flex-direction: column;
+  &__body{
     display: flex;
-    width: 100%;
+    flex-direction: row;
+    height: 100%;
+
+    &__list {
+      height: 100%;
+      width: 300px;
+      flex-grow: 1;
+    }
+  }
     &__empty {
       display: flex;
       width: 100%;
       height: 100%;
       justify-content: center;
-      align-items: center;
-    }
   }
 }
