--- a/src/components/List/styles.scss
+++ b/src/components/List/styles.scss
@@ -3,11 +3,8 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  max-height: 100%;
+  height: 100%;
   overflow: auto;
-  border: 1px solid $dark-blue;
-  border-bottom-right-radius: 6px;
-  border-top-right-radius: 6px;
   box-sizing: border-box;
   &::-webkit-scrollbar-track
   {
@@ -28,15 +25,48 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: $dark-blue;
   }
+  &__addButton {
+    background-color: $status-ok !important;
+    &:focus{
+      background-color: $status-ok-pressed !important;
+    }
+    &--text {
+      margin-left: 10px;
+      color: $white;
+    }
+  }
   &__item {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    min-height: 30px;
+    min-height: 40px;
+    min-width: 130px;
+    background-color: $white;
     cursor: pointer;
-    padding: 0 10px;
-    &__active {
-      background-color: #087e8b;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px 10px;
+    box-shadow: 0 1px 1px rgba($grey-blue,0.11),
+    0 2px 2px rgba($grey-blue,0.11),
+    0 4px 4px rgba($grey-blue,0.11),
+    0 6px 8px rgba($grey-blue,0.11),
+    0 8px 16px rgba($grey-blue,0.11);
+    &__decoration{
+      background-color: $accent-red;
+      height: 90%;
+      margin-right: 10px;
+      width: 3px;
+    }
+    &--active {
+      background-color: $grey-blue;
+      &:focus {
+        outline: none;
+        box-shadow: 0 1px 1px rgba($dark-blue,0.11),
+        0 2px 2px rgba($dark-blue,0.11),
+        0 4px 4px rgba($dark-blue,0.11),
+        0 6px 8px rgba($dark-blue,0.11),
+        0 8px 16px rgba($dark-blue,0.11);
+      }
     }
   }
 }
