--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,36 @@
 @import '~Styles/variables.scss';
-
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap');
 html,
 body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   scroll-behavior: smooth;
+}
+
+.layout {
+  margin: 20px;
+  width: 100%;
+  display: flex;
+}
+
+.heading {
+  &__h1 {
+    font-size: 36px;
+    font-weight: 600;
+    color: $dark-blue;
+  }
+  &__h2 {
+    font-size: 24px;
+    font-weight: 600;
+    color: $dark-blue;
+  }
+}
+.text {
+  color: $dark-blue;
+  font-size: 16px;
 }
 
 button {
