переработана часть дизайна страницы курсов и скролл выбора курсов

--- a/src/components/CoursesPage/styles.scss
+++ b/src/components/CoursesPage/styles.scss
@@ -9,8 +9,9 @@
 
     &__list {
       height: 100%;
-      width: 300px;
-      flex-grow: 1;
+      max-width: 400px;
+      min-width: 400px;
+
     }
   }
     &__empty {
