--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,93 @@ button {
   cursor: pointer;
 }
 
+.ui-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 100px;
+  height: 35px;
+  padding: 10px;
+  width: min-content;
+  white-space: nowrap;
+  font-size: 16px;
+  box-sizing: border-box;
+  color: $white;
+  &:focus { outline: none; }
+  //основная кросивая кнопка
+  &.primary {
+    background-color: $accent-red;
+    &:hover {
+      background-color: $dark-red;
+    }
+  }
+  //стиль для отключенной кнопки
+  &:disabled {
+    background-color: $grey-blue;
+    pointer: default;
+  }
+
+  //кнопка-ссылка
+  &.link {
+    border: 2px solid $accent-red;
+    color: $accent-red;
+    cursor: pointer;
+
+    &:hover {
+      border: 2px solid $green;
+      color: $green;
+    }
+  }
+  //доп. кнопка (Как ВОЙТИ)
+  &.secondary {
+    border: 2px solid $green;
+    color: $green;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1) 0s;
+
+    &:hover {
+      color: $white !important;
+      background-color: transparent;
+      &:before {
+        left: 0;
+        right: auto;
+        width: 100%;
+      }
+    }
+    &:before {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 0;
+      z-index: -1;
+      content: '';
+      color: $white !important;
+      background: $green;
+      transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1) 0s;
+    }
+  }
+}
+
+.ui-select {
+  width: 100%;
+  font: 14px/24px 'IBM Plex Sans';
+  color: $dark-blue;
+  cursor: pointer;
+  padding: 8px;
+  max-width: 200px;
+  min-width: 200px;
+  box-sizing: border-box;
+  border: 3px solid $grey-blue;
+
+  &:focus {
+    outline: none;
+    border-color: $green;
+    color: $green;
+  }
+}
 #root {
   display: flex;
   overflow: hidden;
