--- a/src/components/SideBar/styles.scss
+++ b/src/components/SideBar/styles.scss
@@ -3,16 +3,17 @@
 .side-bar {
   display: flex;
   flex-direction: column;
-  width: 150px;
+  width: 200px;
   height: 100vh;
-  background-color: $dark-blue;
-  color: white;
+  background-color: rgba($grey-blue, 0.5);
+  color: $dark-blue;
   padding-top: 20px;
   box-sizing: border-box;
 
   &__logo {
     background: no-repeat center/50% $img-likbez-logo;
-    height: 40px;
+    height: 80px;
+    margin: 20px 0;
   }
 
   &__item {
@@ -31,6 +32,7 @@
       &[data-no-active="true"] {
         &:hover {
           background-color: $accent-red;
+          color: $white;
         }
       }
     }
