Revert "Feature/courses page"

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,4 @@
-/* Colours */
-$white: #FFF;
+$white: #FFFFFF;
 $grey-blue: #C1CFDA;
 $grey-text: #979797;
 $dark-grey-text: #444444;
@@ -9,12 +8,5 @@ $accent-red: #FF5A5F;
 $dark-red: #C81D25;
 $saturated-red: #FF4040;
 
-$status-ok: #00c781;
-$status-ok-pressed: #00AC9C;
-$status-error: #FF4040;
-$status-warning: #FFAA15;
-
-  /** Images */
+/** Images */
 $img-likbez-logo: url('~Public/likbez-original-for-web.svg');
-$start: url('~Public/knight.svg');
-$img-likbez-empty-courses: url('~/Public/bg-courses.svg');
