--- a/src/components/CoursePage/styles.scss
+++ b/src/components/CoursePage/styles.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   flex-grow: 3;
   margin: 0 40px;
+  overflow-y: auto;
   &__button{
     background-color: $status-ok;
     margin: 20px 0;
